sidebar - fixed extended children still having padding when sidebar collapsed

--- a/src/css/bundle.css
+++ b/src/css/bundle.css
@@ -4571,7 +4571,7 @@ html:has(.kroma-navbar) .kroma-sidebar{
 
 }
 
-.kroma-sidebar li[data-idparent] {
+.kroma-sidebar:not(.collapsed) li[data-idparent] {
   padding-left: 10px;
   max-height: 100px;
   transition: 100ms;
